--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -1,10 +1,32 @@
 {% extends "app/layout.html" %}
+{% load staticfiles %}
 
 {% block content %}
-
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
-
-<p>Use this area to provide additional information.</p>
-
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/product.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/about.css' %}" />
+    <div class="content">
+        <p>Компания ООО ПРОТРОН работает в области разработки, производства источников вторичного электропитания и силовой аппаратуры различного назначения:</p>
+        <ul>
+            <li>
+        для промышленной автоматики;
+            </li>
+            <li>
+        транспорта;
+            </li>
+            <li>
+        измерительного и испытательного оборудования;
+            </li>
+            <li>
+        телекоммуникаций;
+            </li>
+            <li>
+        специального и ответственного применения.
+            </li>
+        </ul>
+        <p>ООО "ПРОТРОН" образованна совместно с СП «ЭЛКОН», где основной костяк сотрудников это бывшие работники КБ при академии наук Молдавии.</p>
+        <p>Основная специализация при работе в КБ – разработка приборов и устройств автоматики и силовой электроники в целях обеспечения экспериментов связанных с сильными электромагнитными полями, лазерного и СВЧ оборудования. Работы по закрытым тематикам.</p>
+        <p>В 2006-2008 годах были получены евразийский и европейский патенты на способ построения высоконадежных преобразователей напряжения для мощных источников питания, генераторов импульсов тока или напряжения, генераторов ТВЧ.</p>
+        <p>Научный потенциал компании позволяет разрабатывать уникальные решения систем электропитания, силовой электроники и автоматики в короткие сроки.</p>
+    </div>
 {% endblock %}
