--- a/app/templates/app/complicted.html
+++ b/app/templates/app/complicted.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'app/slick/slick.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/slick/slick-theme.css' %}" />
 
-<div class="content slider">
+<div class="content ">
     <div>
         <div class="number_item">
             <div class="number">1</div>
@@ -38,11 +38,11 @@
     <div>
         <div class="number_item">
             <div class="number">7</div>
-            <p>Источники мощностью 15 и 30 кВт для исследований процессов МДО. <span>По Договору с Госуниверситетом г. Стамбул, Турция.</span></p>
+            <p>Установка ТВЧ нагрева мощностью 5 кВт, для ВЧ (550-800 кГц) нагрева твердых сплавов. В количестве 20 штук. <span>По заказу Российской компании.</span></p>
         </div>
         <div class="number_item">
             <div class="number">8</div>
-            <p>Автоматизированная установка для исследования процессов МДО. <span>По заказу Госуниверситета г. Стамбул, Турция.</span></p>
+            <p>Генератор ТВЧ (440 кГц) мощностью 1.5 кВт для литья микропровода в количестве 100 штук. <span>По заказу Российской компании.</span></p>
         </div>
         <div class="number_item">
             <div class="number">9</div>
@@ -75,7 +75,7 @@
             slidesToShow: 4,
             centerMode: true,
             centerPadding: '0px',
-            arrows: false,
+            arrows: true,
             dots: true,
             infinite: true,
             speed: 300,
