--- a/app/templates/app/products/rip.html
+++ b/app/templates/app/products/rip.html
@@ -1,8 +1,5 @@
 {% load staticfiles %}
 <link rel="stylesheet" type="text/css" href="{% static 'app/content/products/rip.css' %}" />
-<div class="photo" style="background-image: url(/media/{{ image1 }})">
-
-</div>
 <div class="description">
     <div class="text">
         <p>Регулируемые источники электропитания серии PAD, PDD* представляют собой импульсные AC/DC преобразователи напряжения мощностью 250 до 1500 Вт, с глубокой регулировкой выходного напряжения от 0 до 100%.</p>
@@ -11,6 +8,7 @@
         <p>Универсальные преобразователи PROTON нашли широкое применение в системах электропитания для нужд энергетического сектора, телекоммуникаций, промышленной аппаратуры ответственных сфер применения.</p>
         <p class="warning">* При доработке по ТЗ заказчика</p>
     </div>
+<div class="photo" style="background-image: url(/media/{{ image1 }})"></div>
     <div class="files">
         <div class="icon"></div>
         <p><a href="/media/file.pdf">Краткая техническая информация</a></p>
