--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -37,7 +37,7 @@
                     <p>Автоматический выход на рабочий режим после исчезновения и последующего возникновения напряжения в сети электропитания.</p>
                 </div>
                 <div style="align-self: center; justify-self: center;">
-                    <a class="btn_style" href="/product/1">Подробнее</a>
+                    <a class="btn_style" href="/product/2">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -46,12 +46,15 @@
             <div class="content">
                 <div class="item">
                     <p>Регулируемые источники питания</p>
+                    <a class="btn_style_small" href="/product/1">Подробнее</a>
                 </div>
                 <div class="item">
                     <p>Для монтажа в 19" стойку</p>
+                    <a class="btn_style_small" href="/product/3">Подробнее</a>
                 </div>
                 <div class="item">
                     <p>Для монтажа на DIN-рейку</p>
+                    <a class="btn_style_small" href="/product/4">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -88,41 +91,42 @@
         <input />
         <p>Комментарий:</p>
         <input style="height: 200px;" />
-        <p>* - Поля обязательные для заполнения</p>
+        <p style="text-align: right;font-size: 1rem;">* - Поля обязательные для заполнения</p>
         <button>Отправить</button>
-        <p>Отправляя форму, я даю согласие на обработку</p>
-        <a>персональных данных.</a>
+        <p style="font-size: 1rem;">Отправляя форму, я даю согласие на обработку <a>персональных данных.</a></p>
     </div>
 </div>
 
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <!--<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>-->
     <script src="{% static '/app/slick/slick.min.js' %}"></script>
 <script type="text/javascript">
     function Slider() {
         var settings = {
             autoplay: true,
-            autoplaySpeed: 3000,
+            autoplaySpeed: 7000,
             slidesToShow: 3,
             centerMode: true,
             centerPadding: '0px',
-            arrows: false,
-            dots: true,
+            arrows: true,
+            dots: false,
             infinite: true,
             speed: 300,
             fade: false,
             cssEase: 'linear',
             responsive: [
                 {
-                    breakpoint: 1024,
+                    breakpoint: 1025,
                     settings: {
                         slidesToShow: 2,
+                        dots: true,
                     }
                 },
                 {
                 breakpoint: 720,
                 settings: {
-                    slidesToShow: 1
+                    slidesToShow: 1,
+                    dots: true,
                     }
                 }
             ] 
