--- a/app/templates/app/products/skz.html
+++ b/app/templates/app/products/skz.html
@@ -1,9 +1,8 @@
 ﻿{% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'app/content/products/rip.css' %}" />
-<div class="photo" style="background-image: url(/media/{{ image1 }});">
 
-</div>
+<div class="photo" style="background-image: url(/media/{{ image1 }});"></div>
 <div class="description">
     <div class="text">
         <p>Станции катодной защиты ПРОТРОН предназначены для использования в комплексных системах электрохимической защиты подземных металлических сооружений от коррозии.</p>
