--- a/app/static/app/content/products/rip.css
+++ b/app/static/app/content/products/rip.css
@@ -38,9 +38,9 @@
 }
 
     .description .text p {
-        text-indent: 50px;
+        /* text-indent: 50px; */
         text-align: justify;
-        padding: 0.5em;
+        padding-bottom: 1em;
     }
 
     .description .text .warning {
