--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -23,10 +23,10 @@ display: flex;
     align-items: center;
     justify-content: center;
     position: fixed;
-    width: 100%;
-    /* left: 0; */
+    /*width: 100vw;*/
+     left: 0; 
     top: 0;
-    /* right: 0; */
+     right: 0; 
     bottom: 0;
     background: white;
     z-index: 1001;
